[package]
name = "nanopowrs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.6.0"
tokio = { version = "1.41.1", features = ["rt", "process"] }
rsnano_core = { git = "https://github.com/rsnano-node/rsnano-node", branch = "develop" }
rsnano_nullable_random = { git = "https://github.com/rsnano-node/rsnano-node", branch = "develop" }
rsnano_nullable_clock = { git = "https://github.com/rsnano-node/rsnano-node", branch = "develop" }
rsnano_rpc_messages = { git = "https://github.com/rsnano-node/rsnano-node", branch = "develop" }
rsnano_rpc_client = { git = "https://github.com/rsnano-node/rsnano-node", branch = "develop" }
rand = "0.8.5"
eframe = "0.29.1"
serde_json = "1.0.133"
env_logger = "0.11.5"
log = "0.4.22"
anyhow = "1.0.93"
axum = "0.7.9"
serde = "1.0.215"


[target.'cfg(target_os = "android")'.dependencies]
# Android-specific dependencies
android-activity = { version = "0.6.0", features = ["native-activity"] }
jni = "0.21.1"
